Ajuste em produtos

--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -1,3 +1,16 @@
-.container {
-    background-color: red;
+
+.flexRow--productDetails {
+    display: flex;
+    
+    background-color: greenyellow;
+}
+
+.flex-layout.row {
+    background-color: yellow;
+}
+
+
+.flexRow--viewProduto{
+    display: flex;
+    background-color: turquoise;
 }
