--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -4,17 +4,18 @@
     border-radius: 50%;
 }
 
-
 .productNameContainer {
-    background-color: cadetblue;
+    
+    height: 40%;
 }
 
 .sellingPrice {
-    background-color:orange;
+    
+    height: 40%;
 }
 
 .container {
-    background-color: red;
+    
     flex: box;
     flex-direction: column;
 }
